# opam-publish

./: .gitignore  .merlin  .travis.yml  CHANGES  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  dune-project  opam  opam-publish.opam
.github/workflows/: main.yml
src/: dune  jbuild  opam_publish.ml  publishCommon.ml  publishCompat.ml  publishMain.ml  publishSubmit.ml  version.ml  version.mli
