opam-version: "2.0"
version: "2.1.0"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: [
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
  "David Sheets <sheets@alum.mit.edu>"
  "Jeremie Dimino <jdimino@janestreet.com>"
]
homepage: "https://github.com/ocaml/opam-publish"
bug-reports: "https://github.com/ocaml/opam-publish/issues"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/ocaml/opam-publish.git"
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "cmdliner"
  "dune" {>= "1.0"}
  "lwt_ssl"
  "ocaml" {>= "4.03.0"}
  "opam-core" {>= "2.1.0~rc"}
  "opam-format" {>= "2.1.0~rc"}
  "opam-state" {>= "2.1.0~rc"}
  "github" {>= "2.0.0" & < "4.3.0" | >= "4.3.2"}
  "github-unix" {>= "2.0.0" & < "4.3.0" | >= "4.3.2"}
  ("ssl" {= "0.5.5"} | "tls")
]
flags: plugin
synopsis: "A tool to ease contributions to opam repositories"
description: """
opam-publish automates publishing packages to package repositories: it checks that the
opam file is complete using `opam lint`, verifies and adds the archive URL and its
checksum and files a GitHub pull request for merging it.
"""
