(executable
 (public_name opam-publish)
 (package opam-publish)
 (name publishMain)
 (libraries
  lwt
  opam-core
  opam-format
  opam-state
  cohttp
  github.unix
  cmdliner
  opam-ci-check-lint))

(rule
  (targets version.ml)
  (action (with-stdout-to %{targets} (echo "let version = \"%{version:opam-publish}\""))))
